--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
 
-  redis:
-    container_name: redis
+  redis_dev:
+    container_name: redis_dev
     image: redis
     ports:
       - 6379:6379
@@ -11,8 +11,16 @@ services:
       - data:/data
     entrypoint: redis-server --appendonly yes
     restart: always
- 
 
+  redis_test:
+    container_name: redis_test
+    image: redis
+    ports:
+      - 6380:6380
+    volumes:
+      - data:/data
+    entrypoint: redis-server --port 6380 --appendonly yes
+    restart: always
+ 
 volumes:
   data:
-
